fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -210,16 +210,21 @@ footer h4{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 1em;
+  min-width: 150px;
 }
 
 .feature-holder, .article-holder{
-  max-width: 20%;
-  min-width: 230px;
+  margin-bottom: 1em;
+  width: 20%;
 }
 
-.feature-holder + .feature-holder{
-  margin-left: 1.5em;
+.feature-holder h3{
+  text-align: center;
+}
+
+.feature-holder + .feature-holder,
+.article-holder + .article-holder{
+  margin-left: 2em;
 }
 
 .feature-holder img{
@@ -256,8 +261,8 @@ footer h4{
 }
 
 .article-holder{
-  margin: 1rem;
   background-color: var(--white);
+  min-width: 250px;
 }
 
 .articleList img{
@@ -374,10 +379,12 @@ footer h4{
   }
 
   .feature-holder, .article-holder{
+    width: 100%;
     max-width: 400px;
   }
 
-  .feature-holder + .feature-holder{
+  .feature-holder + .feature-holder,
+  .article-holder + .article-holder{
     margin-left: 0;
   }
 
